Bug 1493789 - Render solid colors for the source-list-selection -moz-appearance values on 10.10+ if they're not used in a vibrant context. r=spohl

Depends on D51460

Differential Revision: https://phabricator.services.mozilla.com/D78923